<resources>
    <string name="app_name">FINALFINALFINAL</string>
    <string name="txTitle">Title</string>
    <string name="txLink">Link</string>
    <string name="txRating">Rating</string>
    <string name="addBtn">ADD!</string>
    <string name="showBtn">Show</string>
    <string name="btUpdate">Update</string>
    <string name="btDelete">Delete</string>
    <string name="btAddEntry">Add New Trailer</string>
    <string name="btNavBack">Go Back</string>
</resources>
