<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mattiscool.matt.finalfinalfinal.MainActivity">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="66dp"
            android:text="@string/txTitle" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txTitle"
            android:layout_toEndOf="@+id/txTitle"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txTitle"
            android:layout_marginTop="61dp"
            android:text="@string/txLink" />

        <EditText
            android:id="@+id/editLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txLink"
            android:layout_alignEnd="@+id/editTitle"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txLink"
            android:layout_marginTop="45dp"
            android:text="@string/txRating" />

        <EditText
            android:id="@+id/editRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txRating"
            android:layout_toEndOf="@+id/txRating"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editLink"
            android:layout_below="@+id/txRating"
            android:layout_marginTop="28dp"
            android:text="@string/addBtn" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
